turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:4: error: not found: value setCouleurSol
		setCouleurSol(blanc)
                ^LangtonsAnt:10: error: not found: value setCouleurSol
		setCouleurSol(black)
                ^