turmites.lessons.turmites.langton.Langton.scala.code
def step() {
	getCouleurSol()
	if ( getCouleurSol() == Color.black){
		setCouleurSol(blanc)
		marqueSol()
		gauche()
		avance()
	}
	if (getCouleurSol() == Color.white){
		setCouleurSol(black)
		marqueSol()
		droite()
		avance()
	}
}

def marqueSol(){
	baisseBrosse()
	leveBrosse()
}
